--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,34 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  //- h1= title
+  //- p Welcome to #{title}
 
   div(ng-controller="DatepickerDemoCtrl")
-    .panel
-      p {{ dt.getTime() }}
     .row
       .col-md-6
-        h4 Inline
-        div(style="display:inline-block; min-height:290px;")
-          uib-datepicker.well.well-sm(
+        .col-md-12
+          h4.page-header Username's messages
+          div(style="display:inline-block; min-height:290px;")
+            //- days were have notes: bootstrap BADGES
+            uib-datepicker.well.well-sm(
             ng-model="dt"
             min-date="minDate"
             show-weeks="true" custom-class="getDayClass(date, mode)"
           )
+        .col-md-12
+          h4.page-header Add new message
+          form(style="text-align:right;" ng-submit="createNewMessage()" novalidate)
+            .form-group
+              input.form-control(type="text" placeholder="date" ng-model="data")
+            .form-group
+              input.form-control(type="text" placeholder="Subject" ng-model="subject")
+            textarea.form-control(rows="3" placeholder="Message" ng-model="message")
+            button.btn.btn-default(type="submit" style="margin-top: 10px;") Submit
       .col-md-6
+        h4.page-header(style="text-align:center") {{ headerFormatdt }}
+        .panel.panel-default
+          .panel-body
+            p.header NOTE HEADER
+            p.body note body note body note body note body note body note body
         pre #{dates}
