socket_io, workon days which had a notes for datepicker

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-a{color:#00B7FF}.full button span{background-color:limegreen;border-radius:32px;color:black}.partially button span{background-color:orange;border-radius:32px;color:black}
+a{color:#00B7FF}.full button span{background-color:limegreen;border-radius:32px;color:black}.partially button span{background-color:orange;border-radius:32px;color:black}.uib-day button{position:relative}.postCounter:before{position:absolute;right:0;top:0;background-color:red;border-radius:9px;height:12px;width:12px;font-size:9px}
