--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -12,3 +12,21 @@ a {
   border-radius: 32px;
   color: black;
 }
+
+.uib-day {
+  button {
+    position: relative;
+  }
+}
+.postCounter {
+  &:before {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: red;
+    border-radius: 9px;
+    height: 12px;
+    width: 12px;
+    font-size: 9px;
+  }
+}
