--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,4 +12,5 @@ html(ng-app="ui.bootstrap.demo")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.min.js")
+    script(src="socket.io/socket.io.js")
     script(src="javascripts/main.js")
