--- a/views/index.jade
+++ b/views/index.jade
@@ -1,23 +1,22 @@
 extends layout
 
 block content
-  //- h1= title
-  //- p Welcome to #{title}
-
   div(ng-controller="DatepickerDemoCtrl")
     .col-md-6
-      .col-md-12(style="padding: 0")
+      .col-md-12.select-notes-date
         h4.page-header Username's messages
-        div(style="display:inline-block; min-height:290px;")
+        .uib-datepicker-wrapper
           //- days were have notes: bootstrap BADGES
           uib-datepicker.well.well-sm(
           ng-model="dt"
-          show-weeks="true" custom-class="getDayClass(date, mode)"
+          show-weeks="true"
+          custom-class="getDayClass(date, mode)"
+          template-url="/html/datepicker.html"
         )
-      .col-md-12(style="padding: 0")
+      .col-md-12.create-new-note
         h4.page-header Add new message
-        form(style="text-align:right;" ng-submit="createNewMessage()" novalidate)
-          .input-group(style="margin-bottom: 15px")
+        form(ng-submit="createNewMessage()" novalidate)
+          .input-group
             input.form-control(
               type="text"
               uib-datepicker-popup
@@ -26,7 +25,7 @@ block content
               datepicker-options="dateOptions"
               ng-required="true"
               close-text="Close"
-              placeholder="date"
+              placeholder="YYYY-MM-DD"
             )
             span.input-group-btn
               button.btn.btn-default(type="button" ng-click="open2()")
@@ -34,20 +33,20 @@ block content
           .form-group
             input.form-control(type="text" placeholder="Subject" ng-model="subject")
           textarea.form-control(rows="3" placeholder="Message" ng-model="message")
-          button.btn.btn-default(type="submit" style="margin-top: 10px;") Submit
+          button.btn.btn-default(type="submit") Submit
     .col-md-6
-      h4.page-header(style="text-align:center") {{ headerFormatdt }}
-      .panel.panel-default(ng-repeat="note in notes.notes" ng-show="notes.notes.length")
+      h4.page-header {{ headerFormatdt }}
+      .panel.panel-default(ng-repeat="note in notes" ng-show="notes.length")
         .panel-body
           p.header {{ note.subject }}
           p.body {{ note.message }}
-      .panel.panel-default(ng-show="!notes.notes.length" style="display: table; width: 100%;")
-        p(style="vertical-align: middle; height: 100px; display: table-cell; text-align: center; width: 100%;") There is no notes on this day
+      .panel.panel-default(ng-show="!notes.length")
+        p There is no notes on this day
 
-      .panel.panel-default
-        p frontend
-        pre {{ notes }}
-      .panel.panel-default
-        p bakend
-        pre #{dates}
-        pre #{ttt}
+      //- .panel.panel-default
+      //-   p frontend
+      //-   pre {{ notes }}
+      //- .panel.panel-default
+      //-   p bakend
+      //-   pre #{dates}
+      //-   pre #{ttt}
