create users, add badges

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -15,15 +15,15 @@
   border-radius: 32px;
   color: black;
 }
-.postCounter span {
-  &:before {
+.btn {
+  .badge {
     position: absolute;
-    right: 0;
     top: 0;
-    background-color: @badge-bg;
-    border-radius: 9px;
+    right: 0;
+    font-size: 9px;
     height: 12px;
     width: 12px;
-    font-size: 9px;
+    padding: 0;
+    line-height: 12px;
   }
 }
