Create new post - validation

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -3,27 +3,5 @@
 @import "note.less";
 @import "create-new-note.less";
 @import "custom-datepicker.less";
-
-// deprecated - remove this SH***
-.full button span {
-  background-color: limegreen;
-  border-radius: 32px;
-  color: black;
-}
-.partially button span {
-  background-color: orange;
-  border-radius: 32px;
-  color: black;
-}
-.btn {
-  .badge {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 9px;
-    height: 12px;
-    width: 12px;
-    padding: 0;
-    line-height: 12px;
-  }
-}
+@import "badges.less";
+@import "custom-form-validation";
